--- a/src/public/pages/quiz/review.html
+++ b/src/public/pages/quiz/review.html
@@ -1,6 +1,6 @@
 <div id="quiz-box">
     <section id="quiz-head">
-        <h1>The One Quiz (20/20 onmogelijk)</h1>
+        <h1>The One Quiz</h1>
         <button>RESET</button>
     </section>
 
@@ -12,12 +12,9 @@
             <h1 class="quiz-name-options">Character:</h1>
             <div class="character-options">
 
-
             </div>
             <h1 class="quiz-name-options">Movie:</h1>
             <div class="movie-options">
-
-
             </div>
 
         </section>
