--- a/src/public/pages/quiz/gamemode.html
+++ b/src/public/pages/quiz/gamemode.html
@@ -3,7 +3,7 @@
         <h1>The One Quiz</h1>
     </section>
 
-    <section id="quiz-main">
+    <section id="quiz-main-gamemode">
         <button type="submit" class="start-quiz-ten">TEN QUESTIONS</button>
         <button type="submit" class="start-quiz-suddendeath">SUDDEN DEATH</button>
     </section>
