Performancce went up

--- a/src/public/pages/quiz/review.html
+++ b/src/public/pages/quiz/review.html
@@ -1,5 +1,4 @@
-<div id="quiz-box">
-    <section id="quiz-head">
+  <section id="quiz-head">
         <h1>The One Quiz</h1>
         <button>RESET</button>
     </section>
@@ -26,8 +25,7 @@
     </section>
 
     <section id="quiz-footer" class="flex evenspace">
-        <button id="prevSub">Vorige</button>
+        <button id="prevSub">Previous</button>
         <h2 class="quiz-total-score"></h2>
-        <button id="nextSub">Volgende</button>
+        <button id="nextSub">Next</button>
     </section>
-</div>
