--- a/src/public/pages/landing.html
+++ b/src/public/pages/landing.html
@@ -9,15 +9,18 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <main>
+    <main id="landing-container">
+
         <h1>Choose your project</h1>
+    <div class="landing-choices">
     
-    <a href="./index"><input type="image" src="assets/images/logoLOTR.png" style="border: double;" height="100" width="200"/></a>
-    <a href="./404"><input type="image" src="assets/images/fifa.png" style="border: double;" height="100" width="200"/></a>
-    <a href="./404"><input type="image" src="assets/images/fortnite.jpg" style="border: double;" height="100" width="200"/></a>
-    <a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg" style="border: double;" height="100" width="200"/></a>
-    <a href="./404"><input type="image" src="assets/images/Magic_The_Gathering.png" style="border: double;" height="100" width="200"/></a>
-    <a href="./404"><input type="image" src="assets/images/nationalebank.png" style="border: double;" height="100" width="200"/></a>
-    </main>
+        <a href="./index"><input type="image" src="assets/images/logoLOTR.png" style="border: double;" height="100" width="200"/></a>
+        <a href="./404"><input type="image" src="assets/images/fifa.png" style="border: double;" height="100" width="200"/></a>
+        <a href="./404"><input type="image" src="assets/images/fortnite.jpg" style="border: double;" height="100" width="200"/></a>
+        <a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg" style="border: double;" height="100" width="200"/></a>
+        <a href="./404"><input type="image" src="assets/images/Magic_The_Gathering.png" style="border: double;" height="100" width="200"/></a>
+        <a href="./404"><input type="image" src="assets/images/nationalebank.png" style="border: double;" height="100" width="200"/></a>    
+    </div>
+   </main>
 </body>
 </html>
