--- a/src/public/pages/quiz/active.html
+++ b/src/public/pages/quiz/active.html
@@ -1,6 +1,6 @@
 <section id="quiz-head">
         <h1>The One Quiz</h1>
-            <button>RESET</button>
+        <input type="image" src="../../assets/icon/refresh.svg" alt="" id="refresh">
     </section>
 
     <section id="quiz-main">
