--- a/src/public/pages/quiz/review.html
+++ b/src/public/pages/quiz/review.html
@@ -1,6 +1,6 @@
   <section id="quiz-head">
         <h1>The One Quiz</h1>
-        <button>RESET</button>
+        <input type="image" src="../../assets/icon/refresh.svg" alt="" id="refresh">
     </section>
 
     <section id="quiz-main">
@@ -25,7 +25,7 @@
     </section>
 
     <section id="quiz-footer" class="flex evenspace">
-        <button id="prevSub">Previous</button>
+        <input type="image" src="../../assets/icon/arrow.svg" alt="" id="prevSub">
         <h2 class="quiz-total-score"></h2>
-        <button id="nextSub">Next</button>
+        <input type="image" src="../../assets/icon/arrow.svg" alt="" id="nextSub">
     </section>
