--- a/src/public/pages/quiz/review.html
+++ b/src/public/pages/quiz/review.html
@@ -22,9 +22,11 @@
                 <input type="image" src="assets/images/like.png" height="25" name="like" class="rate-button" />
                 <input type="image" src="assets/images/dislike.png" height="25" name="dislike" class="rate-button" id="dislike-button" />        
         <section id="reason-dislike-popup">
-            <p><br>Why did you dislike this?</p>
-            <textarea name="reason" id="reason-dislike" cols="70" rows="2" style="resize: none;" maxlength="100"></textarea>
-            <input type="image" src="../../assets/icon/send.svg" alt="send">
+            <p><br>Please give a reason why you dislike this quote:<br><br></p>
+            <div>
+                <textarea name="reason" id="reason-dislike" cols="70" rows="2" style="resize: none;" maxlength="100"></textarea>
+                <input type="image" src="../../assets/icon/send.svg" alt="send">
+            </div>
         </section>
             </div>
         </section>
