--- a/src/public/pages/quiz/active.html
+++ b/src/public/pages/quiz/active.html
@@ -15,5 +15,5 @@
 
     <section id="quiz-footer">
         <h2></h2>
-        <input type="image" src="../../assets/icon/arrow.svg" alt="" id="quiz-submit">
+        <input type="image" src="../../assets/icon/arrow.svg" alt="" id="quiz-submit" disabled> 
       </section>
