--- a/src/public/pages/quiz/begin.html
+++ b/src/public/pages/quiz/begin.html
@@ -4,7 +4,7 @@
     </section>
 
     <section id="quiz-main">
-        <button type="submit" class="start-quiz">START QUIZ</button>
+        <input type="image" class="start-quiz" src="../../assets/icon/startQuiz.png" alt="start">
     </section>
 
     <section id="quiz-footer" style="display: block; text-align: center;">
