Scoreboard is now part of the quiz

--- a/src/public/pages/quiz/active.html
+++ b/src/public/pages/quiz/active.html
@@ -1,6 +1,9 @@
 <section id="quiz-head">
         <h1>The One Quiz</h1>
-        <input type="image" src="../../assets/icon/refresh.svg" alt="" id="refresh">
+        <div>
+          <input type="image" src="../../assets/icon/scoreboard.svg" alt="" id="scoreboard" title="Scoreboard">
+          <input type="image" src="../../assets/icon/refresh.svg" alt="" id="refresh" title="Reset Quiz">
+        </div>
     </section>
 
     <section id="quiz-main">
