--- a/src/public/pages/quiz/begin.html
+++ b/src/public/pages/quiz/begin.html
@@ -1,6 +1,9 @@
 
     <section id="quiz-head">
         <h1>The One Quiz</h1>
+        <div>
+            <input type="image" src="../../assets/icon/scoreboard.svg" alt="" id="scoreboard" title="Scoreboard">
+          </div>
     </section>
 
     <section id="quiz-main">
