--- a/src/public/pages/404.html
+++ b/src/public/pages/404.html
@@ -27,7 +27,7 @@
 #error_body{
     background-color: black;
 }
-            #error40s4_container{
+            #error404_container{
                 margin: auto;
                 width: 95%;
                 padding: 10px;
@@ -59,6 +59,9 @@
                 text-decoration: none;
                 color: gray;
 
+            }
+            #error_content p a{
+                color: white;
             }
         </style>
         </main>
