--- a/src/public/pages/404.html
+++ b/src/public/pages/404.html
@@ -61,7 +61,7 @@
 
             }
             #error_content p a{
-                color: white;
+                color: lightgray;
             }
         </style>
         </main>
