--- a/src/public/pages/quiz/scoreboard.html
+++ b/src/public/pages/quiz/scoreboard.html
@@ -1,24 +1,25 @@
 <section id="quiz-head">
-        <h1>Scoreboard</h1>
-        <input type="image" src="../../assets/icon/return.svg" alt="" id="return" title="Return to quiz">
-    </section>
-    <section id="score-table-space">
-        <table id="score-table">
-            <thead>
-                <tr>
-                    <th scope="col">Rank</td>
-                    <th scope="col">Name</td>
-                    <th scope="col">Score</td>
-                </tr>
-            </thead>
+    <h1>Scoreboard</h1>
+    <input type="image" src="../../assets/icon/return.svg" alt="" id="return" title="Return to quiz">
+</section>
+<section id="score-table-space">
+    <table id="score-table">
+        <thead>
+            <tr>
+                <th scope="col">Rank</td>
+                <th scope="col">Name</td>
+                <th scope="col">Score</td>
+                <th scope="col">Time</td>
+            </tr>
+        </thead>
 
-            <tbody>
+        <tbody>
 
-            </tbody>
-        </table>
-    </section>
+        </tbody>
+    </table>
+</section>
 
-    <section id="quiz-footer" style="display: flex; text-align: center;">
-        <input type="image" src="../../assets/icon/arrow.svg" alt="" id="prevScore" disabled>  
-        <input type="image" src="../../assets/icon/arrow.svg" alt="" id="nextScore" disabled>
-    </section>
+<section id="quiz-footer" style="display: flex; text-align: center;">
+    <input type="image" src="../../assets/icon/arrow.svg" alt="" id="prevScore" disabled>
+    <input type="image" src="../../assets/icon/arrow.svg" alt="" id="nextScore" disabled>
+</section>
