--- a/public/pages/landing.html
+++ b/public/pages/landing.html
@@ -9,18 +9,17 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <main id="landing-container">
+    <main id="landing-page">
 
-        <h1>Choose your project</h1>
-    <div class="landing-choices">
-    
-        <a href="./index"><input type="image" src="assets/images/logoLOTR.png" style="border: double;" height="100" width="200"/></a>
-        <a href="./404"><input type="image" src="assets/images/fifa.png" style="border: double;" height="100" width="200"/></a>
-        <a href="./404"><input type="image" src="assets/images/fortnite.jpg" style="border: double;" height="100" width="200"/></a>
-        <a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg" style="border: double;" height="100" width="200"/></a>
-        <a href="./404"><input type="image" src="assets/images/Magic_The_Gathering.png" style="border: double;" height="100" width="200"/></a>
-        <a href="./404"><input type="image" src="assets/images/nationalebank.png" style="border: double;" height="100" width="200"/></a>    
-    </div>
+    <h1>Choose your project</h1>
+    <section class="landing-choices">
+        <a href="./index"><input type="image" src="assets/images/logoLOTR.png"></a>
+        <a href="./404"><input type="image" src="assets/images/fifa.png"></a>
+        <a href="./404"><input type="image" src="assets/images/fortnite.jpg"></a>
+        <a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg"></a>
+        <a href="./404"><input type="image" src="assets/images/Magic_The_Gathering.png"></a>
+        <a href="./404"><input type="image" src="assets/images/nationalebank.png"></a>    
+    </section>
    </main>
 </body>
 </html>
