--- a/public/pages/landing.html
+++ b/public/pages/landing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +9,31 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
 </head>
+
 <body>
+
+    <div class="landing-overlay">
+        <div class="landing-overlay__popup">
+            <div class="landing-overlay__popup__content">
+                <p>You can't participate in this project!</p>
+                <button>OK</button>
+            </div>
+        </div>
+    </div>
+
+
     <main id="landing-page">
 
-    <h1>Choose your project</h1>
-    <section class="landing-choices">
-        <a href="./index"><input type="image" src="assets/images/logoLOTR.png"></a>
-        <a href="./404"><input type="image" src="assets/images/fifa.png"></a>
-        <a href="./404"><input type="image" src="assets/images/fortnite.jpg"></a>
-        <a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg"></a>
-        <a href="./404"><input type="image" src="assets/images/Magic_The_Gathering.png"></a>
-        <a href="./404"><input type="image" src="assets/images/nationalebank.png"></a>    
-    </section>
-   </main>
+        <h1>Choose your project</h1>
+        <section class="landing-choices">
+            <a href="./index"><input type="image" src="assets/images/logoLOTR.png"></a>
+            <a href="./404"><input type="image" src="assets/images/fifa.png"></a>
+            <a href="./404"><input type="image" src="assets/images/fortnite.jpg"></a>
+            <a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg"></a>
+            <a href="./404"><input type="image" src="assets/images/Magic_The_Gathering.png"></a>
+            <a href="./404"><input type="image" src="assets/images/nationalebank.png"></a>
+        </section>
+    </main>
 </body>
+
 </html>
