--- a/public/pages/landing.html
+++ b/public/pages/landing.html
@@ -11,27 +11,29 @@
 </head>
 
 <body>
+    <script src="/js/jquery-3.6.0.js"></script>
+    <script src="../js/landing.js" defer></script>
 
-    <div class="landing-overlay">
+    <div id="landing-overlay">
         <div class="landing-overlay__popup">
             <div class="landing-overlay__popup__content">
                 <p>You can't participate in this project!</p>
-                <button>OK</button>
+                <button id="landing-overlay-button">OK</button>
             </div>
         </div>
     </div>
 
-
     <main id="landing-page">
-
-        <h1>Choose your project</h1>
-        <section class="landing-choices">
-            <a href="./index"><input type="image" src="assets/images/logoLOTR.png"></a>
-            <a href="./404"><input type="image" src="assets/images/fifa.png"></a>
-            <a href="./404"><input type="image" src="assets/images/fortnite.jpg"></a>
-            <a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg"></a>
-            <a href="./404"><input type="image" src="assets/images/Magic_The_Gathering.png"></a>
-            <a href="./404"><input type="image" src="assets/images/nationalebank.png"></a>
+        <section>
+            <h1>Choose your project</h1>
+            <article class="landing-choices">
+                <a href="./index" class="landing-choice"><input type="image" src="assets/images/logoLOTR.png"></a>
+                <a href="#" class="landing-choice"><input type="image" src="assets/images/fifa.png"></a>
+                <a href="#" class="landing-choice"><input type="image" src="assets/images/fortnite.jpg"></a>
+                <a href="#" class="landing-choice"><input type="image" src="assets/images/LEGO MASTERS.jpg"></a>
+                <a href="#" class="landing-choice"><input type="image" src="assets/images/Magic_The_Gathering.png"></a>
+                <a href="#" class="landing-choice"><input type="image" src="assets/images/nationalebank.png"></a>
+            </article>
         </section>
     </main>
 </body>
