Voorbereiding voor later

--- a/public/pages/quiz/active.html
+++ b/public/pages/quiz/active.html
@@ -1,9 +1,9 @@
 <section class="title-bar" id="quiz-head">
-    <h1>The One Quiz - Scoreboard</h1> 
+    <h1>The One Quiz</h1> 
  </section>
- 
+
  <section id="quiz-main">
-   
+    
  </section>
 
  <section id="quiz-footer">
