Quiz style partial 1

--- a/public/pages/quiz/active.html
+++ b/public/pages/quiz/active.html
@@ -1,11 +1,31 @@
 <section class="title-bar" id="quiz-head">
-    <h1>The One Quiz</h1> 
- </section>
+    <h1>The One Quiz</h1>
 
- <section id="quiz-main">
-    
- </section>
+    <div class="title-icons">
+        <input type="image" src="../../assets/icon/scoreboard.svg" alt="scoreboard" title="Scoreboard">
+        <input type="image" src="../../assets/icon/refresh.svg" alt="refresh" title="Reset Quiz">
+    </div>
+</section>
 
- <section id="quiz-footer">
+<section id="quiz-main">
+   <cite><h2 class="quiz-quote"></h2></cite>
+    <section class="quiz-options">
+        <div>
+            <h3>Who's quote is this?</h3>
+            <article class="character-options" ></article>
+        </div>
+        
+        <div>
+            <h3>In which movie?</h3>
+            <articlle class="movie-options">
+        </div>
 
+        </articlle>
+    </section>
+</section>
+
+<section id="quiz-footer" class="footer">
+<h2></h2>
+
+<input type="image" id="quiz-submit" src="../../assets/icon/refresh.svg" alt="refresh" title="Reset Quiz">
 </section>
