--- a/public/pages/quiz/begin.html
+++ b/public/pages/quiz/begin.html
@@ -1,12 +1,15 @@
 <section class="title-bar" id="quiz-head">
     <h1>The One Quiz</h1> 
+    <div class="title-icons">
+      <input type="image" src="../../assets/icon/scoreboard.svg" alt="scoreboard" title="Scoreboard">
+  </div>
  </section>
 
  <section id="quiz-main">
-    <button class="start-quiz-ten">TEN QUESTIONS</button>
-    <button class="start-quiz-suddendeath">TEN QUESTIONS</button>
+    <button class="gamemode-button start-quiz-ten">TEN QUESTIONS</button>
+    <button class="gamemode-button start-quiz-suddendeath">SUDDEN DEATH</button>
  </section>
 
- <section id="quiz-footer">
-
+ <section id="quiz-footer" class="footer" style="display: block; text-align: center;">
+   <h1>The best quiz you'll ever make!</h1>
 </section>
