Test voor gulsum te stijlen

--- a/public/pages/quiz/review.html
+++ b/public/pages/quiz/review.html
@@ -1,5 +1,9 @@
 <section class="title-bar" id="quiz-head">
-    <h1>The One Quiz</h1> 
+    <h1>The One Quiz</h1>
+    <div class="title-icons">
+        <input type="image" src="../../assets/icon/scoreboard.svg" alt="scoreboard" title="Scoreboard">
+        <input type="image" src="../../assets/icon/refresh.svg" alt="refresh"id="refresh" title="Reset Quiz">
+    </div>
  </section>
 
  <section id="quiz-main">
