--- a/public/pages/quiz/active.html
+++ b/public/pages/quiz/active.html
@@ -3,7 +3,7 @@
 
     <div class="title-icons">
         <input type="image" src="../../assets/icon/scoreboard.svg" alt="scoreboard" title="Scoreboard">
-        <input type="image" src="../../assets/icon/refresh.svg" alt="refresh" title="Reset Quiz">
+        <input type="image" src="../../assets/icon/refresh.svg" alt="refresh"id="refresh" title="Reset Quiz">
     </div>
 </section>
 
@@ -27,5 +27,5 @@
 <section id="quiz-footer" class="footer">
 <h2></h2>
 
-<input type="image" id="quiz-submit" src="../../assets/icon/refresh.svg" alt="refresh" title="Reset Quiz">
+<input type="image" id="quiz-submit" src="../../assets/icon/right-arrow.svg" alt="refresh" title="Reset Quiz">
 </section>
