Quiz Klaar, review klaar (nog geen scores)

--- a/public/pages/quiz/active.html
+++ b/public/pages/quiz/active.html
@@ -27,5 +27,5 @@
 <section id="quiz-footer" class="footer">
 <h2></h2>
 
-<input type="image" id="quiz-submit" src="../../assets/icon/right-arrow.svg" alt="refresh" title="Reset Quiz">
+<input type="image" id="quiz-submit" src="../../assets/icon/right-arrow.svg" alt="refresh" title="Next Question">
 </section>
