Alles werkt, behalve scoreboard

--- a/public/pages/quiz/begin.html
+++ b/public/pages/quiz/begin.html
@@ -1,7 +1,7 @@
 <section class="title-bar" id="quiz-head">
     <h1>The One Quiz</h1> 
     <div class="title-icons">
-      <input type="image" src="../../assets/icon/scoreboard.svg" alt="scoreboard" title="Scoreboard">
+      <input type="image" src="../../assets/icon/scoreboard.svg" alt="scoreboard" title="Scoreboard" id="scoreboard">
   </div>
  </section>
 
