--- a/public/pages/quiz/review.html
+++ b/public/pages/quiz/review.html
@@ -1,7 +1,7 @@
 <section class="title-bar" id="quiz-head">
     <h1>The One Quiz</h1>
     <div class="title-icons">
-        <input type="image" src="../../assets/icon/scoreboard.svg" alt="scoreboard" title="Scoreboard">
+        <input type="image" src="../../assets/icon/scoreboard.svg" alt="scoreboard" title="Scoreboard" id="scoreboard">
         <input type="image" src="../../assets/icon/refresh.svg" alt="refresh"id="refresh" title="Reset Quiz">
     </div>
  </section>
@@ -24,9 +24,9 @@
  </section>
 
  <section id="quiz-footer" class="footer">
-    <input type="image" id="prevSub" src="../../assets/icon/left-arrow.svg" alt="refresh" title="Previous Question">
+    <input type="image" id="prevSub" src="../../assets/icon/left-arrow.svg" alt="Previous" title="Previous Question">
   
     <h2 class="quiz-total-score"></h2>
     
-    <input type="image" id="nextSub" src="../../assets/icon/right-arrow.svg" alt="refresh" title="Next Question">
+    <input type="image" id="nextSub" src="../../assets/icon/right-arrow.svg" alt="Next" title="Next Question">
     </section>
