--- a/public/pages/quiz/scoreboard.html
+++ b/public/pages/quiz/scoreboard.html
@@ -1,5 +1,5 @@
 <section class="title-bar" id="quiz-head">
-    <h1>The One Quiz - Scoreboard</h1> 
+    <h1>Scoreboard</h1> 
  </section>
  
  <section id="quiz-main">
