--- a/public/pages/quiz/begin.html
+++ b/public/pages/quiz/begin.html
@@ -6,8 +6,10 @@
  </section>
 
  <section id="quiz-main">
-    <button class="gamemode-button start-quiz-ten">TEN QUESTIONS</button>
-    <button class="gamemode-button start-quiz-suddendeath">SUDDEN DEATH</button>
+    <section class="gamemode-buttons">
+      <button class="gamemode-button start-quiz-ten">TEN QUESTIONS</button>
+      <button class="gamemode-button start-quiz-suddendeath">SUDDEN DEATH</button>
+    </section>
  </section>
 
  <section id="quiz-footer" class="footer" style="display: block; text-align: center;">
