--- a/public/pages/quiz/review.html
+++ b/public/pages/quiz/review.html
@@ -19,9 +19,26 @@
             <articlle class="movie-options">
         </div>
 
-        </articlle>
+        </articlle>  
     </section>
- </section>
+
+
+    <section class="quiz-like-panel">
+        <input type="image" src="../../assets/icon/like.png" alt="Like Quote" name="like" class="rate-button">
+        <input type="image" src="../../assets/icon/dislike.png" alt="Dislike Quote" name="dislike" id="dislike-button" class="rate-button">
+   
+        <section id="reason-dislike-popup">
+            <p><br>Please give a reason why you dislike this quote:<br><br></p>
+            <div>
+                <textarea name="reason" id="reason-dislike" cols="70" rows="2" style="resize: none;" maxlength="100"></textarea>
+                <input type="image" src="../../assets/icon/right-arrow.svg" alt="send">
+            </div>
+     </section>
+    </section>
+
+
+   
+</section>
 
  <section id="quiz-footer" class="footer">
     <input type="image" id="prevSub" src="../../assets/icon/left-arrow.svg" alt="Previous" title="Previous Question">
@@ -29,4 +46,4 @@
     <h2 class="quiz-total-score"></h2>
     
     <input type="image" id="nextSub" src="../../assets/icon/right-arrow.svg" alt="Next" title="Next Question">
-    </section>
+ </section>
